osha.policy Changelog
=====================

1.3.16 (unreleased)
-------------------

- Nothing changed yet.


1.3.15 (2010-04-27)
-------------------

- generateHW2010pdf: Tweaks to make use of new translation message_ids (brand)


1.3.14 (2010-04-26)
-------------------

- fixFOPNewsEventsPortlets: list the target_collection for the news and events portlets in the FOP oshabe-
  low for all countries/languages (deroiste)
- fixFOPNewsEventsPortlets: replace member-states with focal-points in the target_collection (deroiste)
- fixFOPNewsEventsPortlets: Set the local role of the correct fop to editor for each translation (deroiste)
- generateHW2010pdf: Tweaked dimensions and changed from landscape to portrait
  since we now have a new background image (brand)


1.3.13 (2010-04-19)
-------------------

- Typo fix


1.3.12 (2010-04-19)
-------------------

- Bugfix for a missing import in lc event handler (pilz)


1.3.11 (2010-04-19)
-------------------

- erroneous build


1.3.10 (2010-04-19)
-------------------

- Bugfix for linkchecker patch (pilz)
- workaround for LC problem "Unauthorized: You can't retrieve links for this object."
  The event handler listens for IObjectModified on ALL objects. When the actual object
  has been retrieved and links are added to the LinkDatabse, is also sends a modified event.
  The RetrieveManager tests if the user has the ModifyPortalContent on an object before
  attemting to retrieve. In case of the LinkDatabse, this leads to an Unauthorized for all
  non-managers.
  Our work-araound first tests if a retriever exists for the current object, which is not
  the case for the LinkDatabase (thomasw)


1.3.9 (2010-04-18)
------------------

- registering handlers for ObjectModified and ObjectRemoved, that retrieve or
  unregister links regardless of the link_checker's active state. The registration
  is done with offline=True (thomasw)
- patching linkchecker's _register_urls_at_lms, to make sure url objects